syntax = "proto3";

service OrderService{
    rpc GetAll(Empty) returns (OrderList){}
    rpc Get(OrderId) returns (OrderItem){}
    rpc GetRecentOrder(UserId) returns (OrderList){}
    rpc Insert(OrderItem) returns (OrderItem){}
    rpc Update(OrderItem) returns (OrderItem){}
    rpc Remove(OrderId) returns (Empty){}
}

message Empty{}

message OrderItem{
    string id=1;
    string userId=2;
    string machineId=3;
    string timestamp=4;
}

message OrderList{
    repeated OrderItem orders=1;
}

message OrderId{
    string id=1;
}

message UserId{
    string userId=1;
}